--- a/ballistik/Cargo.toml
+++ b/ballistik/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 [dependencies]
 sdl2 = "0.34.3"
 vulkano = "0.21.0"
+vulkano-win = "0.21.0"
 tokio = { version = "1.3.0", features = ["full"] }
+winit = "0.24.0"
