--- a/ballistik/Cargo.toml
+++ b/ballistik/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2018"
 sdl2 = "0.34.3"
 vulkano = "0.21.0"
 vulkano-win = "0.21.0"
+vulkano-shaders = "0.21.0"
 tokio = { version = "1.3.0", features = ["full"] }
 winit = "0.24.0"
+cgmath = "0.15.0"
